--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -5,6 +5,7 @@ repositories{
 dependencies {
 	compile 'com.google.zxing:core:3.2.1'
 	compile 'com.android.support:appcompat-v7:23.4.0'
+	compile 'com.android.support:design:23.4.0'
 }
 
 android {
